# mrmrob003.github.io

./: 404.html  index.html  index.json  index.xml  manifest.webmanifest  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.html  sitemap.xml
categories/: index.html  index.xml
categories/page/1/: index.html
docs/: index.md  references.bib
docs/notes/: index.md
docs/overrides/stylesheets/: extra.css  mathjax.css
event/: index.html  index.xml
publication/: index.html  index.xml
publication-type/2/: index.html  index.xml
publication-type/2/page/1/: index.html
publication-type/3/: index.html  index.xml
publication-type/7/: index.html  index.xml
publication/damgaard2020eox/: cite.bib  index.html
publication/damgaard2021qbi/: cite.bib  index.html
publication/ferro2020lgp/: cite.bib  index.html
publication/ferro2021dub/: cite.bib  index.html
publication/lukowski2020bya/: cite.bib  index.html
publication/lukowski2021fkf/: cite.bib  index.html
publication/lukowski2022fwz/: cite.bib  index.html
publication/mes2020vgy/: cite.bib  index.html
publication/moerman2016wpv/: cite.bib  index.html
publication/moerman2021cjg/: cite.bib  index.html
publication/msc_thesis/: cite.bib  index.html
publication_types/: index.html  index.xml
publication_types/page/1/: index.html
search/: search_index.json
tags/: index.html  index.xml
tags/page/1/: index.html
talk/kleiss-kuijf-relations-from-momentum-amplituhedron-geometry/: index.html
talk/scattering-amplitudes-from-positive-geometries/: index.html
(+2 files in other folders)
